Final HTML build. Home page setup with flow blocks needed.

--- a/assets/css/_media.scss
+++ b/assets/css/_media.scss
@@ -3,6 +3,14 @@
 
 //Extra Small
 @media (min-width: 320px) {
+	.section-header{
+		.green-text{
+			font-size: 20px;
+		}
+		h2{
+			font-size: 44px;
+		}
+	}
 	.site-header .srch_icon {
 	    position: absolute;
 	    top: 12px;
@@ -39,9 +47,7 @@
 			margin-right: auto;
 		}
 	}
-	#testimonials{
-		padding: 90px 50px 50px 50px;
-	}
+
 
 	.ohio-state-university{
 		padding: 30px 15px;
@@ -50,7 +56,7 @@
 		background: #111f3a;
 	}
 	.section-tailored-solutions {
-	    background-position: -570px 0px!important;
+	    background-position: right top!important;
 	}
 	.block-left, .newsletter-and-socail-icons{
 		max-width: 385px; 
@@ -143,6 +149,63 @@
 			}
 		}
 	}
+	.section-testimonials{
+
+	}
+	.section-what-clients-say{
+		.box-left{
+			max-width: 510px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		.container{
+			max-width: none;
+		}
+		.box-right{
+			margin-top: 40px;
+		}
+	}
+
+	#testimonials{
+		margin-left: -15px;
+		margin-right: -15px;
+		.testimonials-area{
+			.slick-prev {
+			    left: 15px;
+			    z-index:9999;
+			}
+			.slick-next {
+			    right: 15px;
+			    z-index:9999;
+			}
+			.comment{
+				padding: 0px 70px 0px 70px;
+			}
+			.client-info{
+				padding: 30px 15px;
+			}
+		}
+	}
+	.section-hero{
+		.box{
+			margin-bottom: 25px;
+		}
+	}
+	.section-genome-solutions{
+		.box{
+			margin-bottom: 90px;
+		}
+	}
+	.section-genome-solutions{
+		.section-header{
+			margin-bottom: 80px;
+		}
+		.box{
+			max-width: 450px;
+			margin-left: auto; 
+			margin-right: auto;
+		}
+	}
 }
 
 
@@ -162,12 +225,43 @@
 			width: 200px;
 		}
 	}
-
+	.section-banner{
+		.intro-content{
+			h1{
+				font-family: 'Raleway', sans-serif;
+				font-weight: 200;
+			}
+			h2{
+				font-family: 'Raleway', sans-serif;
+				font-weight: 200;
+			}
+		}
+	}
 
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {  
+	.section-header{
+		.green-text{
+			font-size: 35px;
+		}
+		h2{
+			font-size: 50px;
+		}
+	}
+	.section-banner{
+		.intro-content{
+			h1{
+				font-family: 'Montserrat', sans-serif;
+				font-weight: $regular;
+			}
+			h2{
+				font-family: 'Montserrat', sans-serif;
+				font-weight: $light;
+			}
+		}
+	}
 	.site-header .srch_icon {
 	    top: 22px;
 	    right: 95px;
@@ -193,8 +287,32 @@
 			margin-top: 150px;
 		}
 	}
+	.section-what-clients-say{
+		.container{
+			max-width: 720px;
+		}
+		#testimonials{
+			.box-right{
+				margin-top: 120px;
+			}
+			margin-left: 0px;
+			margin-right: 0px;
+			.flex-direction-nav .flex-prev {
+			   left: -40px;
+			    top: 40px;
+			}
+			.flex-direction-nav .flex-next {
+			    right:  -40px;
+			    top: 40px;
+			}
+		}
+		.box-right{
+			margin-top: 120px;
+		}
+	}
 	#testimonials{
-		padding: 90px 135px 50px 135px;
+		margin-left: 0px;
+		margin-right: 0px;
 	}
 	.ohio-state-university{
 		padding: 30px 135px;
@@ -295,16 +413,16 @@
 			}
 		}
 	}
+	.section-genome-solutions{
+		.section-header{
+			margin-bottom: 20px;
+		}
+	}
+
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {  
-	.tailored-solutions{
-		padding-left: 370px;
-	}
-	.section-tailored-solutions {
-	    background-position: -115px top!important;;
-	}
 	.section-clinical-oncology{
 		.content-area{
 			ul.columns2{
@@ -325,7 +443,49 @@
 			}
 		}
 	}
+	.section-testimonials{
+	}
+	.section-what-clients-say{
+		.container{
+			max-width: 960px;
+		}
+	}
+	#testimonials{
+		.testimonials-area{
+			.slick-prev {
+			    left: 35px;
+			    z-index:9999;
+			}
+			.slick-next {
+			    right: 35px;
+			}
+
+			.comment{
+				padding: 0px 135px 0px 135px;
+			}
+			.client-info{
+				padding: 30px 135px;
+			}
+		}
+	}
+	.section-genome-solutions{
+		.box{
+			margin-bottom: 0px;
+		}
+	}
 }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { }
+@media (min-width: 1200px) { 
+	.tailored-solutions{
+		padding-left: 370px;
+	}
+	.section-tailored-solutions {
+	    background-position: left top!important;
+	}
+	.section-what-clients-say{
+		.container{
+			max-width: 1140px;
+		}
+	}
+}
