--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -5,7 +5,7 @@ $semi-bold: 600;
 $bold: 700;
 
 //Base Font
-$base-font: Arial; 
+$base-font: 'Montserrat', sans-serif;
 $font-stack: arial;
 $base-font-size: 13px; 
 $base-line-height: 1.4; 
