--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,600i');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,400');
 @import 'variables';
 @import 'reset';
 @import 'media';
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700');
+
 
 .page-wrapper{
 	overflow: hidden;
@@ -183,7 +184,7 @@
 			text-transform: uppercase;
 		}
 		h2{
-			font-weight: $light; 
+			/*font-weight: $light; */
 			font-size: 50px;
 			color: #fff;
 			text-transform: uppercase;
@@ -221,12 +222,10 @@
 .section-header{
 	.green-text{
 		color: $green;
-		font-size: 35px;
 		font-weight:$regular;
 		text-transform:uppercase;
 	}
 	h2{
-		font-size: 50px;
 		font-weight:$light;
 		text-transform:uppercase;
 		color: $white;
@@ -279,34 +278,40 @@
 	}
 }
 .section-testimonials{
-	background:url(../img/testimonial_bg.png) no-repeat;
+	background:url(../img/testimonial_bg.jpg) no-repeat;
 	background-size: cover;
+	background-attachment: fixed;
+	padding-top: 84px;
 	.inner-container{
-		text-align: center;
+		padding-top:85px;
 		background: #111f3a;
-		#testimonials{
-			h3{
-				font-weight: $light; 
-				color: $green;
-				font-size: 20px;
-				text-transform: uppercase;
-			}
-			/*padding: 90px 135px 50px 135px;*/
-			.flexslider{
-				background: none;
-				box-shadow: none;
-				li{
-					color: #fff;
-					font-weight: $light;
-					font-size: 30px;
-					line-height: 48px;
-				}
-			}
+	}
+}
+#testimonials{
+	h3{
+		font-weight: $light; 
+		color: $green;
+		font-size: 20px;
+		text-transform: uppercase;
+	}
+	.testimonials-area{
+		margin-bottom: 0px;
+		.slick-prev, .slick-next {
+		    top: 25%;
 		}
-		.ohio-state-university{
+		.comment{
+			text-align: center;
+			color: #fff;
+			font-weight: $light;
+			font-size: 30px;
+			line-height: 48px;
+		}
+		.client-info{
 			clear: both;
 			text-align: left;
 			border-top: 3px solid $green;
+			margin-top: 30px;
+
 			img{
 				float: left; 
 			}
@@ -314,14 +319,13 @@
 				color: $green;
 				font-weight: $light;
 				font-size: 20px;
+				line-height: 24px;
 				text-transform:uppercase;
 				margin-left:110px;
 			}
 		}
 	}
-
 }
-
 .section-press-releases{
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -914,3 +918,185 @@
 
 	}
 }
+
+
+// Home Page
+.section-hero{
+	background:url(../img/home_hero_bg.jpg) no-repeat;
+	background-size: cover;
+    position: relative;
+	min-height: 1000px;
+	.container{
+	    position: relative;
+		min-height: 1000px;
+	}
+
+	.intro-content{
+		.content-top{
+			padding-top: 170px;
+			padding-bottom: 45px;
+			h1{
+				color: $green;
+				font-size: 35px;
+			}
+			h2{
+				font-size: 50px;
+				font-weight: $light;
+				color: $white;
+			}
+		}
+		.box{
+			.content_wrap{
+				background: rgba(83,145,170,0.6);
+				padding: 15px 25px 5px 25px;
+				h3{
+					color: $white;
+					font-size: 30px;
+					font-weight: $light;
+					margin-bottom: 0px;
+				}
+				p{
+					font-size: 16px;
+					color: $white;
+					font-weight: $light;
+				}
+			}
+			border-bottom: 3px solid $green;
+		}
+	}
+}
+.section-genome-solutions{
+
+	.box{
+		.content_wrap{
+			margin-top: 30px;
+			h3{
+				font-size: 30px;
+				font-weight: $light;
+				color: $green;
+			}
+			p{
+				color: $white;
+				font-size: 20px;
+				font-weight: $light;
+			}
+		}
+	}
+}
+.section-my-cancer-genome{
+	background:url(../img/bg_women.jpg) no-repeat;	
+	background-size: cover;
+	.box{
+		max-width: 570px;
+		.box-content{
+			background: #578a9d;
+			padding: 30px 20px 30px 40px;
+			border-bottom: 3px solid $green;
+			p{
+				font-weight: $light;
+				color: $white;
+				font-size: 16px;
+			}
+		}
+	}
+
+}
+.section-clients-carousel{
+	.clients-carousel{
+		margin-top: 50px;
+		> div{
+
+			img{
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
+		.slick-track {
+		  display: flex;
+		}
+		.slick-track .slick-slide {
+		  display: flex;
+		  height: auto;
+		  align-items: center;
+		  justify-content: center;
+		}
+	}
+}
+
+.section-what-clients-say{
+	background: url(../img/testimonial_bg.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	.box-left{
+		background: #111f3a;
+		padding: 60px 15px 30px 30px;
+		border-bottom: 3px solid $green;
+		h3{
+			font-size: 26px;
+			font-weight: $light;
+			color: $green;
+			margin-bottom: 20px;
+		}
+		ul{
+			li{
+				text-transform: uppercase;
+			    background: url(../img/green_square.png) no-repeat 2px 6px;
+			    min-height: 15px;
+				padding-left: 30px;
+				margin-bottom: 20px;
+				color: $white;
+				a{
+					color: $green;
+				}
+			}
+		}
+	}
+
+	#testimonials{
+		background: #111f3a;
+		padding-top: 98px;
+		h3{
+			font-weight: $light; 
+			color: $green;
+			font-size: 20px;
+			text-transform: uppercase;
+		}
+		.flexslider{
+			background: none;
+			box-shadow: none;
+			li{
+				color: #fff;
+				font-weight: $light;
+				font-size: 30px;
+				line-height: 48px;
+			}
+		}
+		.slides{
+			img{
+				width:auto;
+			}
+			.comment{
+				text-align: center;
+			}
+			.client-info{
+				clear: both;
+				text-align: left;
+				border-top: 3px solid $green;
+				margin-top: 30px;
+
+				img{
+					float: left; 
+				}
+				p{
+					color: $green;
+					font-weight: $light;
+					font-size: 20px;
+					line-height: 24px;
+					text-transform:uppercase;
+					margin-left:110px;
+				}
+			}
+		}
+	}
+}
+
