--- a/assets/css/_reset.scss
+++ b/assets/css/_reset.scss
@@ -22,9 +22,8 @@ ul li { list-style: none }
 h2{
 	font-weight: $light;
     color: $base-color;
-    text-transform: uppercase;
 }
-h3{
+h1, h2, h3{
     text-transform: uppercase;
 }
 p{
