--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ '/css/bootstrap.min.css'|url }}">
 
+    <!-- Slick css -->
+    <link rel="stylesheet" type="text/css" href="{{ '/css/slick.css'|url }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ '/css/slick-theme.css'|url }}"/>
+
     <!-- font-awesome.css -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
@@ -34,12 +38,15 @@
       <!-- Site Footer -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script src="{{ '/js/jquery.flexslider-min.js'|url }}"></script>
+    <script src="{{ '/js/jquery.magnific-popup.min.js'|url }}"></script>
     <script src="{{ '/js/masonry.pkgd.min.js'|url }}"></script>
+    <script src="{{ '/js/slick.min.js'|url }}"></script>
     <script src="{{ '/js/custom.js'|url }}"></script>
   </body>
 </html>
